Update index to include Mexican Tacos recipe and add Mexican Tacos recipe.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>Odin Recipes</h1>
 
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/mexican-tacos.html">Mexican Tacos Recipe!</a>
 </body>
 </html>
